force-app/main/default/objects/SMS_Keyword__c/SMS_Keyword__c.object-meta.xml
<CustomObject>
    <label>SMS Keyword</label>
    <nameField>
        <displayFormat>SK-{0000000000}</displayFormat>
        <label>SMS Keyword Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Keywords</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>