force-app/main/default/objects/SMS_Keyword__c/fields/Keyword__c.field-meta.xml
<CustomField>
    <fullName>Keyword__c</fullName>
    <label>Keyword</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>